[gd_scene load_steps=24 format=4 uid="uid://d3itko71piu88"]

[ext_resource type="Script" uid="uid://bs5d0027q646k" path="res://scripts/de_vscene.gd" id="1_1bpeb"]
[ext_resource type="Texture2D" uid="uid://di5aevt74ldr1" path="res://sprites/5 - Sky_color.png" id="1_m4vjy"]
[ext_resource type="Texture2D" uid="uid://bsldb5wgoirp2" path="res://sprites/Background parts/3 - Cloud_cover_1.png" id="2_1bpeb"]
[ext_resource type="Texture2D" uid="uid://bh3qpxyovk4np" path="res://sprites/Background parts/4 - Cloud_cover_2.png" id="3_dk3rr"]
[ext_resource type="Texture2D" uid="uid://c4gaqv2u7csst" path="res://sprites/Background parts/2 - Smaller_mountains.png" id="4_s8fhq"]
[ext_resource type="Texture2D" uid="uid://b3hh1s5opdrja" path="res://sprites/Background parts/1 - Snowy_foreground_area.png" id="5_28ywn"]
[ext_resource type="TileSet" uid="uid://cmvxick7uh3kv" path="res://etc/DEVscene.tres" id="6_dmgtq"]
[ext_resource type="PackedScene" uid="uid://byemunyirw4b8" path="res://tcns/playerG.tscn" id="7_1081j"]
[ext_resource type="Script" uid="uid://bqkobbjc26m4g" path="res://scripts/chamines_control.gd" id="8_61ig0"]
[ext_resource type="Texture2D" uid="uid://chea6tgo0ipxs" path="res://sprites/tunel.png" id="8_dk3rr"]
[ext_resource type="Script" uid="uid://b52jtpuu2n6qq" path="res://scripts/win.gd" id="8_s8fhq"]
[ext_resource type="PackedScene" uid="uid://dm4jglk8s6n1b" path="res://tcns/chamine.tscn" id="9_io6hk"]
[ext_resource type="FontFile" uid="uid://c4gbx4qpwu2fy" path="res://etc/at01.ttf" id="10_om75x"]
[ext_resource type="StyleBox" uid="uid://ciubmamqslg8r" path="res://etc/button.tres" id="11_4i1lr"]
[ext_resource type="StyleBox" uid="uid://b1d8ixu70hvik" path="res://etc/button pressed.tres" id="12_hlvpd"]
[ext_resource type="StyleBox" uid="uid://dsevatp1duedv" path="res://etc/button hover.tres" id="13_c2u0s"]
[ext_resource type="StyleBox" uid="uid://cxqth2e7dbfaf" path="res://etc/button disabled.tres" id="14_tprid"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_28ywn"]
size = Vector2(20, 47)

[sub_resource type="Curve" id="Curve_tlkxq"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.8597286, 0.21348321), -1.8393681, -1.8393681, 0, 0, Vector2(1, 0), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_0wlry"]
curve = SubResource("Curve_tlkxq")

[sub_resource type="Gradient" id="Gradient_mmfbl"]
offsets = PackedFloat32Array(0.45641026, 0.6226415, 1)
colors = PackedColorArray(1, 1, 1, 0.33333334, 1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_u3xqw"]
gradient = SubResource("Gradient_mmfbl")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_vd881"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(500, 1, 1)
gravity = Vector3(-45, 98, 0)
scale_max = 4.0
color_initial_ramp = SubResource("GradientTexture1D_u3xqw")
alpha_curve = SubResource("CurveTexture_0wlry")
turbulence_enabled = true
turbulence_noise_speed_random = 0.0

[node name="DEV scene" type="Node2D"]
script = ExtResource("1_1bpeb")

[node name="paralax" type="Node2D" parent="."]
modulate = Color(0.932786, 0.9239034, 0.91503376, 1)

[node name="ceu" type="Parallax2D" parent="paralax"]
scroll_scale = Vector2(0.5, 0.5)
repeat_size = Vector2(576, 416)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="paralax/ceu"]
scale = Vector2(2, 2)
texture = ExtResource("1_m4vjy")
centered = false

[node name="nuvens2" type="Parallax2D" parent="paralax"]
scroll_scale = Vector2(0.6, 0.6)
repeat_size = Vector2(576, 0)
autoscroll = Vector2(-3, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="paralax/nuvens2"]
scale = Vector2(2, 2)
texture = ExtResource("2_1bpeb")
centered = false

[node name="nuvens1" type="Parallax2D" parent="paralax"]
scroll_scale = Vector2(0.7, 0.7)
repeat_size = Vector2(576, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="paralax/nuvens1"]
scale = Vector2(2, 2)
texture = ExtResource("3_dk3rr")
centered = false

[node name="montanhas" type="Parallax2D" parent="paralax"]
scroll_scale = Vector2(0.85, 0.85)
repeat_size = Vector2(576, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="paralax/montanhas"]
scale = Vector2(2, 2)
texture = ExtResource("4_s8fhq")
centered = false

[node name="arvores" type="Parallax2D" parent="paralax"]
scroll_scale = Vector2(0.9, 0.9)
repeat_size = Vector2(576, 0)
repeat_times = 3

[node name="Sprite2D" type="Sprite2D" parent="paralax/arvores"]
scale = Vector2(2, 2)
texture = ExtResource("5_28ywn")
centered = false

[node name="tilemap" type="Node2D" parent="."]

[node name="TileMapLayer2" type="TileMapLayer" parent="tilemap"]
modulate = Color(0.5251013, 0.5251013, 0.5251013, 1)
tile_map_data = PackedByteArray("AAAAAA0AAwAAAAAAAAABAA0AAwAAAAAAAAACAA0AAwAAAAAAAAADAA0AAwAAAAAAAAAEAA0AAwAAAAAAAAAFAA0AAwAAAAAAAAAGAA0AAwAAAAAAAAAHAA0AAwAAAAAAAAAIAA0AAwAAAAAAAAAJAA0AAwAAAAAAAAAKAA0AAwAAAAAAAAALAA0AAwAAAAAAAAAMAA0AAwAAAAAAAAANAA0AAwAAAAAAAAAOAA0AAwAAAAAAAAAPAA0AAwAAAAAAAAAQAA0AAwAAAAAAAAARAA0AAwAAAAAAAAASAA0AAwAAAAAAAAATAA0AAwAAAAAAAAAUAA0AAwAAAAAAAAAVAA0AAwAAAAAAAAAWAA0AAwAAAAAAAAAXAA0AAwAAAAAAAAAYAA0AAwAAAAAAAAAZAA0AAwAAAAAAAAAaAA0AAwAAAAAAAAAbAA0AAwAAAAAAAAAAAAwAAwAAAAAAAAABAAwAAwAAAAAAAAACAAwAAwAAAAAAAAADAAwAAwAAAAAAAAAEAAwAAwAAAAAAAAAFAAwAAwAAAAAAAAAGAAwAAwAAAAAAAAAHAAwAAwAAAAAAAAAIAAwAAwAAAAAAAAAJAAwAAwAAAAAAAAAKAAwAAwAAAAAAAAALAAwAAwAAAAAAAAAMAAwAAwAAAAAAAAANAAwAAwAAAAAAAAAOAAwAAwAAAAAAAAAPAAwAAwAAAAAAAAAQAAwAAwAAAAAAAAARAAwAAwAAAAAAAAASAAwAAwAAAAAAAAATAAwAAwAAAAAAAAAUAAwAAwAAAAAAAAAVAAwAAwAAAAAAAAAWAAwAAwAAAAAAAAAXAAwAAwAAAAAAAAAYAAwAAwAAAAAAAAAZAAwAAwAAAAAAAAAaAAwAAwAAAAAAAAAbAAwAAwAAAAAAAAAaAAQABAAGAAMAAAAbAAQABAADAAYAAAAbAAUABAADAAcAAAAbAAYABAADAAcAAAAbAAcABAADAAcAAAAbAAgABAADAAcAAAAbAAkABAADAAcAAAAbAAoABAADAAcAAAAbAAsABAADAAgAAAD//wwAAwAAAAAAAAD//wsAAwAAAAAAAAD//woAAwAAAAAAAAD//wkAAwAAAAAAAAD//wgAAwAAAAAAAAD//wcAAwAAAAAAAAD//wYAAwAAAAAAAAD//wUAAwAAAAAAAAD//wQAAwAAAAAAAAAHAA8AAgAAAAAAAAD//w0AAwAAAAAAAAAZAAsABAACAAgAAAAaAAsABAACAAgAAAAaAAYABAAEAAcAAAAaAAcABAACAAcAAAAaAAgABAACAAcAAAAaAAkABAAEAAcAAAAaAAoABAACAAcAAAAZAAoABAACAAcAAAAZAAkABAAEAAcAAAAZAAgABAACAAcAAAAZAAcABAACAAcAAAAUAAYAAAAAAAAAAAATAAYAAAAAAAAAAAAUAAgAAAAAAAAAAAAUAAkAAAAAAAAAAAAUAAoAAAAAAAAAAAAUAAsAAAAAAAAAAAAUAAcAAAAAAAAAAAASAAYAAAAAAAAAAAARAAcAAAAAAAAAAAARAAgAAAAAAAAAAAARAAkAAAAAAAAAAAARAAoAAAAAAAAAAAARAAsAAAAAAAAAAAARAAYAAAAAAAAAAAAQAAgAAAAAAAAAAAAPAAgAAAAAAAAAAAAPAAoAAAAAAAAAAAAOAAoAAAAAAAAAAAAZAAQABAAGAAMAAAAZAAUABAACAAcAAAAYAAUAAAAAAAAAAAAZAAYABAAEAAcAAAAaAAUABAACAAcAAAAcAAQABAAEAAYAAAAfAAkABAAEAAMAAAAfAAcABAAGAAQAAAAfAAgABAACAAMAAAAfAAsABAACAAQAAAAfAAoABAACAAMAAAAnAAsABAABAAgAAAAnAAoABAABAAcAAAAnAAkABAABAAcAAAAnAAgABAABAAcAAAAnAAcABAABAAcAAAAnAAYABAABAAcAAAAnAAUABAABAAcAAAAnAAQABAABAAcAAAAnAAMABAABAAcAAAAnAAIABAABAAcAAAAmAAEABAAAAAYAAAAoAAEABAAGAAMAAAApAAEABAAGAAMAAAApAAIABAACAAcAAAApAAMABAACAAcAAAApAAQABAACAAcAAAApAAUABAACAAcAAAApAAYABAACAAcAAAApAAcABAACAAcAAAApAAgABAACAAcAAAApAAkABAACAAcAAAApAAoABAACAAcAAAApAAsABAACAAgAAAAqAAEABAAGAAMAAAAqAAIABAACAAcAAAAqAAMABAAEAAcAAAAqAAQABAACAAcAAAAqAAUABAACAAcAAAAqAAYABAAEAAcAAAAqAAcABAACAAcAAAAqAAgABAACAAcAAAAqAAkABAAEAAcAAAAqAAoABAACAAcAAAAqAAsABAACAAgAAAArAAEABAADAAYAAAArAAIABAADAAcAAAArAAMABAADAAcAAAArAAQABAADAAcAAAArAAUABAADAAcAAAArAAYABAADAAcAAAArAAcABAADAAcAAAArAAgABAADAAcAAAArAAkABAADAAcAAAArAAoABAADAAcAAAArAAsABAADAAgAAAAsAAEABAAEAAIAAAAnAAEABAABAAYAAAAoAAIABAACAAcAAAAoAAMABAAEAAcAAAAoAAQABAACAAcAAAAoAAUABAACAAcAAAAoAAYABAAEAAcAAAAoAAcABAACAAcAAAAoAAgABAACAAcAAAAoAAkABAAEAAcAAAAoAAoABAACAAcAAAAoAAsABAACAAgAAAAjAAgABAAGAAQAAAAjAAkABAACAAMAAAAjAAoABAACAAMAAAAjAAsABAACAAQAAAA2AAkACgAAAAEAAAA2AAoACgAAAAIAAAA2AAsACgAAAAMAAAA3AAkACgABAAEAAAA3AAoACgABAAIAAAA3AAsACgABAAMAAAA7AAkACgAAAAEAAAA7AAoACgAAAAIAAAA7AAsACgAAAAMAAAA8AAkACgABAAEAAAA8AAoACgABAAIAAAA8AAsACgABAAMAAAA=")
tile_set = ExtResource("6_dmgtq")
collision_enabled = false

[node name="TileMapLayer" type="TileMapLayer" parent="tilemap"]
tile_map_data = PackedByteArray("AAARAAYABAABAAIAAAASAAYABAAGAAQAAAATAAYABAACAAIAAAAUAAYABAADAAIAAAAUAAcABAADAAMAAAAUAAoABAADAAMAAAAUAAsABAADAAQAAAATAAsABAACAAQAAAASAAsABAACAAQAAAARAAsABAABAAQAAAARAAoABAABAAMAAAARAAkABAABAAMAAAARAAgABAABAAMAAAARAAcABAABAAMAAAATAAkABAAEAAMAAAATAAgABAACAAMAAAATAAcABAACAAMAAAASAAcABAACAAMAAAASAAgABAACAAMAAAASAAkABAAEAAMAAAAYAAsABAADAAgAAAAWAAsABAACAAgAAAAXAAsABAACAAgAAAAWAAoABAACAAcAAAAWAAkABAAEAAcAAAAWAAgABAACAAcAAAAWAAcABAACAAcAAAAWAAYABAAEAAcAAAAWAAUABAACAAcAAAAXAAUABAACAAcAAAAXAAYABAAEAAcAAAAXAAcABAACAAcAAAAXAAgABAACAAcAAAAXAAkABAAEAAcAAAAXAAoABAACAAcAAAAVAAoABAABAAcAAAAVAAkABAABAAcAAAAVAAgABAABAAcAAAAVAAcABAABAAcAAAAVAAYABAABAAcAAAAVAAUABAABAAcAAAAYAAoABAADAAcAAAAYAAkABAADAAcAAAAYAAgABAADAAcAAAAYAAcABAADAAcAAAAYAAYABAADAAcAAAAYAAUABAADAAcAAAAYAAQABAADAAYAAAAUAAQABAAAAAYAAAAZAAQABAAEAAYAAAAVAAQABAABAAYAAAAXAAQABAACAAYAAAAWAAQABAAGAAMAAAAQAAgABgACAAAAAAAPAAgABgAAAAAAAAAPAAoABgACAAAAAAAOAAoABgABAAAAAAAQAAYABAAAAAIAAAARAAwABwAAAAAAAAARAA0ABwAAAAEAAAASAAwABwAAAAAAAAASAA0ABwAAAAEAAAATAAwABwAAAAAAAAATAA0ABwAAAAEAAAAUAAwABwAAAAAAAAAUAA0ABwAAAAEAAAAVAA0ABwAAAAEAAAAWAAwABwAAAAAAAAAWAA0ABwAAAAEAAAAXAAwABwAAAAAAAAAXAA0ABwAAAAEAAAAYAAwABwAAAAAAAAAYAA0ABwAAAAEAAAAZAAwABwAAAAAAAAAZAA0ABwAAAAEAAAAaAAwABwAAAAAAAAAaAA0ABwAAAAEAAAAbAAwABwAAAAAAAAAbAA0ABwAAAAEAAAABAAwABwAAAAAAAAABAA0ABwAAAAEAAAACAAwABwAAAAAAAAACAA0ABwAAAAEAAAADAAwABwAAAAAAAAADAA0ABwAAAAEAAAAEAAwABwAAAAAAAAAEAA0ABwAAAAEAAAAFAAwABwAAAAAAAAAFAA0ABwAAAAEAAAAGAAwABwAAAAAAAAAGAA0ABwAAAAEAAAAHAAwABwAAAAAAAAAHAA0ABwAAAAEAAAAIAAwABwAAAAAAAAAIAA0ABwAAAAEAAAAJAAwABwAAAAAAAAAJAA0ABwAAAAEAAAAKAAwABwAAAAAAAAAKAA0ABwAAAAEAAAALAAwABwAAAAAAAAALAA0ABwAAAAEAAAAMAAwABwAAAAAAAAAMAA0ABwAAAAEAAAANAAwABwAAAAAAAAANAA0ABwAAAAEAAAAOAAwABwAAAAAAAAAOAA0ABwAAAAEAAAAPAAwABwAAAAAAAAAPAA0ABwAAAAEAAAAQAAwABwAAAAAAAAAQAA0ABwAAAAEAAAD//wwABwAAAAEAAAD//w0ABwAAAAEAAAAAAAwABwAAAAAAAAAAAA0ABwAAAAEAAAD//wQABwAAAAEAAAD//wUABwAAAAEAAAD//wYABwAAAAEAAAD//wcABwAAAAEAAAD//wgABwAAAAEAAAD//wkABwAAAAEAAAD//woABwAAAAEAAAD//wsABwAAAAEAAAAVAAsABAABAAgAAAAVAAwABwAAAAAAAAAUAAgABAADAAMAAAAUAAkABAADAAMAAAASAAoABAACAAMAAAATAAoABAACAAMAAAAAAA4ABwAAAAEAAAABAA4ABwAAAAEAAAACAA4ABwAAAAEAAAADAA4ABwAAAAEAAAAEAA4ABwAAAAEAAAAFAA4ABwAAAAEAAAAGAA4ABwAAAAEAAAAHAA4ABwAAAAEAAAAIAA4ABwAAAAEAAAAJAA4ABwAAAAEAAAAKAA4ABwAAAAEAAAALAA4ABwAAAAEAAAAMAA4ABwAAAAEAAAANAA4ABwAAAAEAAAAOAA4ABwAAAAEAAAAPAA4ABwAAAAEAAAAQAA4ABwAAAAEAAAARAA4ABwAAAAEAAAASAA4ABwAAAAEAAAATAA4ABwAAAAEAAAAUAA4ABwAAAAEAAAAVAA4ABwAAAAEAAAAWAA4ABwAAAAEAAAAXAA4ABwAAAAEAAAAYAA4ABwAAAAEAAAAbAA4ABwAAAAEAAAAaAA4ABwAAAAEAAAAZAA4ABwAAAAEAAAANAAoABgAAAAAAAAATAAUABAACAAEAAAAUAAUABAADAAEAAAASAAUABAABAAEAAAAXAAMABAACAAEAAAAYAAMABAADAAEAAAAWAAMABAABAAEAAAAcAAwABwAAAAAAAAAdAAwABwAAAAAAAAAeAAwABwAAAAAAAAAfAAwABwAAAAAAAAAgAAwABwAAAAAAAAAhAAwABwAAAAAAAAAiAAwABwAAAAAAAAAjAAwABwAAAAAAAAAkAAwABwAAAAAAAAAlAAwABwAAAAAAAAAmAAwABwAAAAAAAAAnAAwABwAAAAAAAAAoAAwABwAAAAAAAAApAAwABwAAAAAAAAAqAAwABwAAAAAAAAArAAwABwAAAAAAAAAwAAwABwAAAAAAAAAxAAwABwAAAAAAAAAyAAwABwAAAAAAAAAzAAwABwAAAAAAAAA0AAwABwAAAAAAAAA1AAwABwAAAAAAAAAcAA0ABwAAAAEAAAAcAA4ABwAAAAEAAAAdAA0ABwAAAAEAAAAdAA4ABwAAAAEAAAAeAA0ABwAAAAEAAAAeAA4ABwAAAAEAAAAfAA0ABwAAAAEAAAAfAA4ABwAAAAEAAAAgAA0ABwAAAAEAAAAgAA4ABwAAAAEAAAAhAA0ABwAAAAEAAAAhAA4ABwAAAAEAAAAiAA0ABwAAAAEAAAAiAA4ABwAAAAEAAAAjAA0ABwAAAAEAAAAjAA4ABwAAAAEAAAAkAA0ABwAAAAEAAAAkAA4ABwAAAAEAAAAlAA0ABwAAAAEAAAAlAA4ABwAAAAEAAAAmAA0ABwAAAAEAAAAmAA4ABwAAAAEAAAAnAA0ABwAAAAEAAAAnAA4ABwAAAAEAAAAoAA0ABwAAAAEAAAAoAA4ABwAAAAEAAAApAA0ABwAAAAEAAAApAA4ABwAAAAEAAAAqAA0ABwAAAAEAAAAqAA4ABwAAAAEAAAArAA0ABwAAAAEAAAArAA4ABwAAAAEAAAAsAA0ABwAAAAEAAAAsAA4ABwAAAAEAAAAtAA0ABwAAAAEAAAAtAA4ABwAAAAEAAAAuAA0ABwAAAAEAAAAuAA4ABwAAAAEAAAAvAA0ABwAAAAEAAAAvAA4ABwAAAAEAAAAwAA0ABwAAAAEAAAAwAA4ABwAAAAEAAAAxAA0ABwAAAAEAAAAxAA4ABwAAAAEAAAAyAA0ABwAAAAEAAAAyAA4ABwAAAAEAAAAzAA0ABwAAAAEAAAAzAA4ABwAAAAEAAAA0AA0ABwAAAAEAAAA0AA4ABwAAAAEAAAA1AA0ABwAAAAEAAAA1AA4ABwAAAAEAAAAZAAUABAAAAAIAAAAaAAUABAABAAIAAAAaAAYABAABAAMAAAAaAAcABAABAAMAAAAaAAgABAABAAMAAAAaAAkABAABAAMAAAAaAAoABAABAAMAAAAaAAsABAABAAQAAAAbAAsABAACAAQAAAAcAAsABAACAAQAAAAdAAsABAACAAQAAAAeAAsABAADAAQAAAAeAAUABAADAAIAAAAdAAUABAACAAIAAAAcAAUABAAGAAQAAAAbAAUABAAGAAQAAAAbAAcABAAEAAMAAAAcAAcABAACAAMAAAAcAAgABAACAAMAAAAcAAkABAACAAMAAAAbAAkABAAEAAMAAAAbAAgABAACAAMAAAAbAAoABAACAAMAAAAcAAoABAACAAMAAAAdAAoABAACAAMAAAAeAAoABAADAAMAAAAeAAkABAADAAMAAAAeAAgABAADAAMAAAAeAAcABAADAAMAAAAeAAYABAADAAMAAAAcAAYABAACAAMAAAAdAAgABAACAAMAAAAdAAkABAAEAAMAAAAdAAcABAAEAAMAAAAdAAQABAACAAEAAAAcAAQABAABAAEAAAAeAAQABAADAAEAAAAfAAUABAAEAAIAAAAbAAYABAACAAMAAAAdAAYABAACAAMAAAAgAAsABAABAAgAAAAgAAoABAABAAcAAAAgAAkABAABAAcAAAAgAAgABAABAAcAAAAgAAcABAABAAcAAAAgAAYABAABAAcAAAAgAAUABAABAAYAAAAhAAUABAACAAYAAAAiAAUABAADAAYAAAAiAAYABAADAAcAAAAiAAcABAADAAcAAAAiAAgABAADAAcAAAAiAAkABAADAAcAAAAiAAoABAADAAcAAAAhAAoABAACAAcAAAAhAAsABAACAAgAAAAiAAsABAADAAgAAAAhAAgABAACAAcAAAAhAAcABAAEAAcAAAAhAAYABAACAAcAAAAhAAkABAAEAAcAAAAjAAUABAAEAAYAAAAhAAQABAACAAEAAAAgAAQABAABAAEAAAAiAAQABAADAAEAAAAkAAcABAABAAIAAAAlAAcABAACAAIAAAAjAAcABAAAAAIAAAAkAAgABAABAAMAAAAkAAkABAABAAMAAAAkAAoABAABAAMAAAAmAAgABAADAAMAAAAmAAkABAADAAMAAAAmAAoABAADAAMAAAAmAAYABAADAAEAAAAmAAcABAADAAIAAAAlAAgABAACAAMAAAAlAAkABAAEAAMAAAAlAAoABAACAAMAAAAkAAsABAABAAQAAAAmAAsABAADAAQAAAAlAAsABAACAAQAAAAkAAYABAABAAEAAAAlAAYABAACAAEAAAA2AAwABwAAAAAAAAA3AAwABwAAAAAAAAA4AAwABwAAAAAAAAA5AAwABwAAAAAAAAA6AAwABwAAAAAAAAA7AAwABwAAAAAAAAA8AAwABwAAAAAAAAACAAkACgAAAAEAAAACAAoACgAAAAIAAAACAAsACgAAAAMAAAADAAkACgABAAEAAAADAAoACgABAAIAAAADAAsACgABAAMAAAAIAAkACgAAAAEAAAAIAAoACgAAAAIAAAAIAAsACgAAAAMAAAAJAAkACgABAAEAAAAJAAoACgABAAIAAAAJAAsACgABAAMAAAA2AA0ABwAAAAEAAAA2AA4ABwAAAAEAAAA3AA0ABwAAAAEAAAA3AA4ABwAAAAEAAAA4AA0ABwAAAAEAAAA4AA4ABwAAAAEAAAA5AA0ABwAAAAEAAAA5AA4ABwAAAAEAAAA6AA0ABwAAAAEAAAA6AA4ABwAAAAEAAAA7AA0ABwAAAAEAAAA7AA4ABwAAAAEAAAA8AA0ABwAAAAEAAAA8AA4ABwAAAAEAAAAsAP//BAABAAMAAAAsAAAABAABAAMAAAAsAAEABAABAAMAAAAsAAIABAABAAMAAAAsAAMABAABAAMAAAAsAAQABAABAAMAAAAsAAUABAABAAMAAAAsAAYABAABAAMAAAAsAAcABAABAAMAAAAsAAgABAABAAMAAAAsAAkABAABAAMAAAAsAAoABAABAAMAAAAsAAsABAABAAQAAAAtAP//BAACAAMAAAAtAAAABAAEAAMAAAAtAAEABAACAAMAAAAtAAIABAACAAMAAAAtAAMABAAEAAMAAAAtAAQABAACAAMAAAAtAAUABAACAAMAAAAtAAYABAAEAAMAAAAtAAcABAACAAMAAAAtAAgABAACAAMAAAAtAAkABAAEAAMAAAAtAAoABAACAAMAAAAtAAsABAACAAQAAAAuAP//BAACAAMAAAAuAAAABAAEAAMAAAAuAAEABAACAAMAAAAuAAIABAACAAMAAAAuAAMABAAEAAMAAAAuAAQABAACAAMAAAAuAAUABAACAAMAAAAuAAYABAAEAAMAAAAuAAcABAACAAMAAAAuAAgABAACAAMAAAAuAAkABAAEAAMAAAAuAAoABAACAAMAAAAuAAsABAACAAQAAAAvAP//BAADAAMAAAAvAAAABAADAAMAAAAvAAEABAADAAMAAAAvAAIABAADAAMAAAAvAAMABAADAAMAAAAvAAQABAADAAMAAAAvAAUABAADAAMAAAAvAAYABAADAAMAAAAvAAcABAADAAMAAAAvAAgABAADAAMAAAAvAAkABAADAAMAAAAvAAoABAADAAMAAAAvAAsABAADAAQAAAAnAP//BgAAAAAAAAAnAAMABgAAAAAAAAAoAP//BgABAAAAAAAoAAMABgACAAAAAAApAP//BgACAAAAAAAqAAEABgAAAAAAAAArAP7/BAAAAAIAAAArAAEABgACAAAAAAAsAP7/BAABAAIAAAAtAP7/BAAGAAQAAAAuAP7/BAACAAIAAAAvAP7/BAADAAIAAAAnAAcABAAEAAIAAAApAAcABgAAAAAAAAAnAAgABgAAAAAAAAAoAAgABgABAAAAAAApAAgABgACAAAAAAAqAAcABgABAAAAAAArAAcABgACAAAAAAAsAAwABwAAAAAAAAAtAAwABwAAAAAAAAAuAAwABwAAAAAAAAAvAAwABwAAAAAAAAAuAP3/BAACAAEAAAAtAP3/BAABAAEAAAAvAP3/BAADAAEAAAAwAP7/BAAEAAIAAAA9AAwABwAAAAAAAAA+AAwABwAAAAAAAAA/AAwABwAAAAAAAABAAAwABwAAAAAAAABBAAwABwAAAAAAAABCAAwABwAAAAAAAABDAAwABwAAAAAAAABEAAwABwAAAAAAAABFAAQABwAAAAEAAABFAAUABwAAAAEAAABFAAYABwAAAAEAAABFAAcABwAAAAEAAABFAAgABwAAAAEAAABFAAkABwAAAAEAAABFAAoABwAAAAEAAABFAAsABwAAAAEAAABFAAwABwAAAAEAAAA1AAkACgAAAAEAAAA1AAoACgAAAAIAAAA1AAsACgAAAAMAAAA2AAkACgABAAEAAAA2AAoACgABAAIAAAA2AAsACgABAAMAAAA3AAkACgAAAAEAAAA3AAoACgAAAAIAAAA3AAsACgAAAAMAAAA4AAkACgABAAEAAAA4AAoACgABAAIAAAA4AAsACgABAAMAAAA5AAkACgAAAAEAAAA5AAoACgAAAAIAAAA5AAsACgAAAAMAAAA6AAkACgABAAEAAAA6AAoACgABAAIAAAA6AAsACgABAAMAAAAwAAAABgAAAAAAAAAxAAAABgACAAAAAAAyAAIABgAAAAAAAAAzAAIABgACAAAAAAAwAAQABgAAAAAAAAAxAAQABgACAAAAAAAyAAYABgAAAAAAAAAzAAYABgACAAAAAAAwAAgABgAAAAAAAAAxAAgABgACAAAAAAAyAAoABgAAAAAAAAAzAAoABgACAAAAAAAqAAUABgAAAAAAAAArAAUABgACAAAAAAA9AA0ABwAAAAEAAAA+AA0ABwAAAAEAAAA+AA4ABwAAAAEAAAA/AA4ABwAAAAEAAABAAA4ABwAAAAEAAABBAA0ABwAAAAEAAABCAA0ABwAAAAEAAABDAA0ABwAAAAEAAABEAA0ABwAAAAEAAABFAA0ABwAAAAEAAABFAA4ABwAAAAEAAABEAA4ABwAAAAEAAABDAA4ABwAAAAEAAABCAA4ABwAAAAEAAABBAA4ABwAAAAEAAAA9AA4ABwAAAAEAAAA/AA0ABwAAAAEAAABAAA0ABwAAAAEAAABEAAsABwAAAAEAAABEAAoABwAAAAEAAABEAAkABwAAAAEAAABDAAkABwAAAAEAAABDAAoABwAAAAEAAABDAAsABwAAAAEAAAA=")
tile_set = ExtResource("6_dmgtq")

[node name="TileMapLayer3" type="TileMapLayer" parent="tilemap"]
tile_map_data = PackedByteArray("AAAfAAUABAAAAAYAAAA=")
tile_set = ExtResource("6_dmgtq")

[node name="win" type="Area2D" parent="tilemap"]
position = Vector2(2167, 320)
rotation = 3.1415927
scale = Vector2(2, -2)
script = ExtResource("8_s8fhq")

[node name="Tunel" type="Sprite2D" parent="tilemap/win"]
texture = ExtResource("8_dk3rr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="tilemap/win"]
position = Vector2(7, 8)
shape = SubResource("RectangleShape2D_28ywn")
debug_color = Color(0, 0.64705884, 0.22745098, 0.34117648)

[node name="PlayerG" parent="." instance=ExtResource("7_1081j")]
position = Vector2(181, 320)

[node name="GPUParticles2D" type="GPUParticles2D" parent="PlayerG"]
position = Vector2(0, -185)
amount = 850
lifetime = 15.0
preprocess = 30.0
process_material = SubResource("ParticleProcessMaterial_vd881")

[node name="chamines" type="Node2D" parent="."]
script = ExtResource("8_61ig0")

[node name="1" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(624, 178)

[node name="2" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(752, 112)

[node name="3" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(944, 143)

[node name="4" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(1072, 144)

[node name="5" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(1200, 208)

[node name="6" parent="chamines" instance=ExtResource("9_io6hk")]
position = Vector2(1488, -79)

[node name="M1" type="Marker2D" parent="chamines"]
position = Vector2(578, 170)

[node name="M2" type="Marker2D" parent="chamines"]
position = Vector2(701, 106)

[node name="M3" type="Marker2D" parent="chamines"]
position = Vector2(893, 137)

[node name="M4" type="Marker2D" parent="chamines"]
position = Vector2(1009, 132)

[node name="M5" type="Marker2D" parent="chamines"]
position = Vector2(1248, 196)

[node name="M6" type="Marker2D" parent="chamines"]
position = Vector2(1424, -86)

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Control" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="CanvasLayer/Control"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("10_om75x")
theme_override_font_sizes/font_size = 96
text = "Casa "

[node name="entrar" type="Button" parent="CanvasLayer/Control"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("10_om75x")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("11_4i1lr")
theme_override_styles/pressed = ExtResource("12_hlvpd")
theme_override_styles/hover = ExtResource("13_c2u0s")
theme_override_styles/disabled = ExtResource("14_tprid")
text = "Entrar"

[node name="sair" type="Button" parent="CanvasLayer/Control"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("10_om75x")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("11_4i1lr")
theme_override_styles/pressed = ExtResource("12_hlvpd")
theme_override_styles/hover = ExtResource("13_c2u0s")
theme_override_styles/disabled = ExtResource("14_tprid")
text = "Sair"

[node name="no" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="no"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0)

[node name="Control" type="VBoxContainer" parent="no"]
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
alignment = 1

[node name="Label" type="Label" parent="no/Control"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("10_om75x")
theme_override_font_sizes/font_size = 96
text = "Ainda faltam duendes"

[node name="sair" type="Button" parent="no/Control"]
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_fonts/font = ExtResource("10_om75x")
theme_override_font_sizes/font_size = 64
theme_override_styles/normal = ExtResource("11_4i1lr")
theme_override_styles/pressed = ExtResource("12_hlvpd")
theme_override_styles/hover = ExtResource("13_c2u0s")
theme_override_styles/disabled = ExtResource("14_tprid")
text = "Sair"

[node name="start" type="CanvasLayer" parent="."]
visible = false

[node name="ColorRect" type="ColorRect" parent="start"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="Timer" type="Timer" parent="start"]
wait_time = 0.5

[connection signal="body_entered" from="tilemap/win" to="tilemap/win" method="_on_body_entered"]
[connection signal="entered" from="chamines/1" to="chamines" method="_on__entered"]
[connection signal="entered" from="chamines/2" to="chamines" method="_on__entered"]
[connection signal="entered" from="chamines/3" to="chamines" method="_on__entered"]
[connection signal="entered" from="chamines/4" to="chamines" method="_on__entered"]
[connection signal="entered" from="chamines/5" to="chamines" method="_on__entered"]
[connection signal="entered" from="chamines/6" to="chamines" method="_on__entered"]
[connection signal="pressed" from="CanvasLayer/Control/entrar" to="chamines" method="_on_entrar_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/sair" to="chamines" method="_on_sair_pressed"]
[connection signal="pressed" from="no/Control/sair" to="tilemap/win" method="_on_no_sair_pressed"]
